--- a/app/components/wm-platform/wm-platform-manifest.json
+++ b/app/components/wm-platform/wm-platform-manifest.json
@@ -88,7 +88,7 @@ var manifest={
       "attributes" : [],
       "node_type":{"input":true, "output":true},
       "allow_fullscreen":false,
-      "disp_config_panel": false,
+      "disp_config_panel": true,
       "disp_in_list": true,
     },
     {
