--- a/bower.json
+++ b/bower.json
@@ -14,16 +14,14 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#~0.3.4",
-    "paper-elements": "Polymer/paper-elements#~0.3.4",
-    "core-elements": "Polymer/core-elements#~0.3.4",
+    "polymer": "Polymer/polymer#~0.4.2",
+    "paper-elements": "Polymer/paper-elements#~0.4.2",
+    "core-elements": "Polymer/core-elements#~0.4.2",
     "webaudio-controls": "054162983b182f15a7a477177278701bea49580f"
   },
   "resolutions": {
-    "polymer": "~0.3.4",
-    "core-component-page": "^0.3.0",
-    "platform": "^0.3.0",
-    "core-transition": "^0.3.0",
-    "core-meta": "^0.3.0"
+    "platform": "^0.4.0",
+    "core-component-page": "^0.4.0",
+    "polymer": "~0.4.2"
   }
 }
