--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.4.2",
+    "polymer-gestures": "Polymer/polymer-gestures#~0.4.2",
     "paper-elements": "Polymer/paper-elements#~0.4.2",
     "core-elements": "Polymer/core-elements#~0.4.2",
     "webaudio-controls": "054162983b182f15a7a477177278701bea49580f"
@@ -22,6 +23,6 @@
   "resolutions": {
     "platform": "^0.4.0",
     "core-component-page": "^0.4.0",
-    "polymer": "~0.4.2"
+    "polymer": "^0.4.0"
   }
 }
