--- a/app/components/wm-platform/wm-platform-manifest.json
+++ b/app/components/wm-platform/wm-platform-manifest.json
@@ -151,6 +151,42 @@ var manifest={
       "disp_config_panel": false,
       "disp_in_list": true,
     },
+    {
+      "name": "LEAP Filter",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-leapfilter",
+      "path": "components/wm-leap/wm-leapfilter.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":true},
+      "allow_fullscreen":false,
+      "disp_config_panel": false,
+      "disp_in_list": true,
+    },
+    {
+      "name": "LEAP Gain",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-leapgain",
+      "path": "components/wm-leap/wm-leapgain.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":true},
+      "allow_fullscreen":false,
+      "disp_config_panel": false,
+      "disp_in_list": true,
+    },
+    {
+      "name": "LEAP Panner",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-leappanner",
+      "path": "components/wm-leap/wm-leappanner.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":true},
+      "allow_fullscreen":false,
+      "disp_config_panel": false,
+      "disp_in_list": true,
+    },
 
   ]
 }
