--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "polymer-gestures": "Polymer/polymer-gestures#~0.4.2",
     "paper-elements": "Polymer/paper-elements#~0.4.2",
     "core-elements": "Polymer/core-elements#~0.4.2",
-    "webaudio-controls": "054162983b182f15a7a477177278701bea49580f"
+    "webaudio-controls": "054162983b182f15a7a477177278701bea49580f",
+    "leapjs": "leapmotion/leapjs#0.6.1"
   },
   "resolutions": {
     "platform": "^0.4.0",
