--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-connect": "~0.8.0"
+  },
+  "dependencies": {
+    "bower": "^1.3.12",
+    "express": "^4.9.8",
+    "logfmt": "^1.2.0"
+  },
+  "engines": {
+    "node": "0.10.x"
+  },
+  "scripts": {
+    "postinstall": "bower install"
   }
 }
