Add tmalib based modules

--- a/app/components/wm-platform/wm-platform-manifest.json
+++ b/app/components/wm-platform/wm-platform-manifest.json
@@ -5,6 +5,42 @@ var manifest={
 
   "plugins": [
     {
+      "name": "Specticle (tmalib)",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-specticle",
+      "path": "../bower_components/wm-specticle/wm-specticle.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":false},
+      "allow_fullscreen": true,
+      "disp_config_panel": false,
+      "disp_in_list": true,
+    },
+    {
+      "name": "Morphere (tmalib)",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-morphere",
+      "path": "../bower_components/wm-morphere/wm-morphere.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":false},
+      "allow_fullscreen": true,
+      "disp_config_panel": false,
+      "disp_in_list": true,
+    },
+    {
+      "name": "GLSL Sound Box",
+      "description": "test",
+      "use": "webaudio",
+      "tag_name": "wm-glsl-soundbox",
+      "path": "../bower_components/wm-glsl-soundbox/wm-glsl-soundbox.html",
+      "attributes" : [],
+      "node_type":{"input":true, "output":false},
+      "allow_fullscreen": true,
+      "disp_config_panel": false,
+      "disp_in_list": false,
+    },
+    {
       "name": "Drag&Drop Audio Source",
       "description": "test",
       "use": "webaudio",
