--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "bower": "^1.3.12",
     "express": "^4.9.8",
-    "logfmt": "^1.2.0"
+    "logfmt": "^1.2.0",
+    "momolog": "0.1.0"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "4.2.1"
   },
   "scripts": {
     "postinstall": "bower install"
